--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "postcss ./src/input.css -o dist/style.css --watch"
+    "dev": "postcss ./src/input.css -o assets/dist/style.css --watch"
   },
   "keywords": [],
   "author": "",
