--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.33",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.3.6"
   },
   "dependencies": {
